--- a/.github/workflows/integrations.yml
+++ b/.github/workflows/integrations.yml
@@ -1,26 +1,21 @@
 name: setup-node
-on: push
+description: "Setup Node.js ⚙️ - Cache dependencies ⚡ - Install dependencies 🔧"
+runs:
+  using: "composite"
+  steps:
+    - name: Setup Node.js ⚙️
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
 
-jobs:
-  build:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Setup Node.js ⚙️
-        uses: actions/setup-node@v4
-        with:
-          node-version: 20
-  
-      - name: Cache dependencies ⚡
-        id: cache_dependencies
-        uses: actions/cache@v3
-        with:
-          path: node_modules
-          key: node-modules-${{ hashFiles('package-lock.json') }}
-  
-      - name: Install dependencies 🔧
-        shell: bash
-        if: steps.cache_dependencies.outputs.cache-hit != 'true'
-        run: npm ci
+    - name: Cache dependencies ⚡
+      id: cache_dependencies
+      uses: actions/cache@v3
+      with:
+        path: node_modules
+        key: node-modules-${{ hashFiles('package-lock.json') }}
 
-      - name: Build with Next.js
-        run: npx next build
+    - name: Install dependencies 🔧
+      shell: bash
+      if: steps.cache_dependencies.outputs.cache-hit != 'true'
+      run: npm ci
