--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -24,5 +24,7 @@ jobs:
         shell: bash
         if: steps.cache_dependencies.outputs.cache-hit != 'true'
         run: npm ci
+      - name: Install dependencies
+        run: yarn install
       - name: Build with Next.js
         run: next build
