--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Install dependencies
         run: yarn install
       - name: Build with Next.js
-        run: next build
+        run: npx next build
