--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -28,3 +28,7 @@ jobs:
         run: yarn install
       - name: Build with Next.js
         run: npx next build
+      - name: Upload artifact 📡
+        uses: actions/upload-pages-artifact@v3
+        with:
+          path: ./out
